--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
 
 	<!-- 프로젝트가 사용하는 외부 의존 라이브러리 -->
 	<dependencies>
+	
+		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
+		@Resuorce를 사용하기 위한 라이브러리-->
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+	
 
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
